gitops/qb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qb
spec:
  ports:
  - name: app
    port: 80
    targetPort: 8080
    protocol: TCP
    appProtocol: http
  selector:
    app: qb
---
apiVersion: v1
kind: Service
metadata:
  name: qb-traffic
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.1.213
spec:
  ports:
  - name: traffic
    port: 6881
    targetPort: 6881
    protocol: TCP
    appProtocol: TCP
  - name: traffic-udp
    port: 6881
    targetPort: 6881
    protocol: UDP
    appProtocol: UDP
  selector:
    app: qb
  type: LoadBalancer
